--- a/style.css
+++ b/style.css
@@ -251,6 +251,25 @@ nav li a:hover:after {
     background-color: #3266cc !important;
 }
 
+/*  */
+/* Offer */
+/*  */
+
+.offerBackground {
+    background: url('img/oferta.jpg') no-repeat center top;
+    background-size: cover;
+    min-height: 950px;
+    color:#fff;
+}
+
+.offerBackgroundBox{
+    min-height:300px;
+    background:rgba(0,0,0,.5);
+    color:#fff;
+    border-left:1px solid #fff;
+
+}
+
 @media (max-width: 1366px) {
     
 }
