--- a/style.css
+++ b/style.css
@@ -43,6 +43,15 @@ b {
     font-weight: 400 !important;
 }
 
+h1.pageName {
+    font-size:2.2rem;
+    font-family:"Futura-Dem"!important;
+}
+
+span.pageTxt {
+    font-size:1.2rem;
+}
+
 .sygnet {
     width:72px;
 }
@@ -108,6 +117,11 @@ b {
 
 .bluePrimaryTxt {
     color: #3266cc !important;
+}
+
+.grayTxt {
+    color:#7f8289 !important;
+    font-size:1.2rem;
 }
 
 .buttonRounded:hover {
@@ -252,29 +266,82 @@ nav li a:hover:after {
 }
 
 /*  */
-/* Offer */
+/* Offer Page*/
 /*  */
 
-.offerBackground {
+.offerPageBackground {
     background: url('img/oferta.jpg') no-repeat center top;
     background-size: cover;
     min-height: 950px;
     color:#fff;
 }
 
-.offerBackgroundBox{
-    min-height:300px;
+.offerPageBackgroundBox{
+    min-height:370px;
     background:rgba(0,0,0,.5);
     color:#fff;
+    font-size:1.4rem;
     border-left:1px solid #fff;
 
 }
+
+.offerBorderedBox {
+    border:1px solid #cccccc;
+}
+
+.iconOffer {
+    width:28%;
+}
+
+h1.categoryOffer {
+    font-size:2rem;
+    color:#A5A9B1;
+}
+
+span.categoryTxt {
+    font-size:1.2rem;
+}
+
+ul.offerList {
+    list-style: none;
+    padding-inline-start: 15px;
+    margin-top:1rem !important;
+  }
+  
+  ul.offerList li::before {
+    content: "\2022";
+    color: #3367cd;
+    font-weight: bold;
+    display: inline-block; 
+    width: 1em;
+    margin-left: -1em;
+  }
+
+  .buttonBlackShadow {
+    -webkit-box-shadow: 0px 15px 15px -5px rgba(0,0,0,0.5);
+    -moz-box-shadow: 0px 15px 15px -5px rgba(0,0,0,0.5);
+    box-shadow: 0px 15px 15px -5px rgba(0,0,0,0.5);
+  }
+
 
 @media (max-width: 1366px) {
     
 }
 
 @media (max-width: 1024px) {
+
+    h1.pageName {
+        font-size:2.2rem;
+        color:#3266cc;
+        font-family:"Futura-Dem"!important;
+    }
+    
+    span.pageTxt {
+        font-size:1.2rem;
+        color:#000;
+        border-bottom:1px solid #000;
+    }
+
     .container-fluid {
         padding: 0 !important;
     }
@@ -327,6 +394,49 @@ nav li a:hover:after {
     .stopka {
         min-height:auto;
     }
+
+
+    /*  */
+    /* Offer Page*/
+    /*  */
+
+    .iconOffer {
+        width:100%;
+    }
+
+    .offerBorderedBox {
+        border:1px solid #cccccc;
+        border-left:none;
+        border-right:none;
+    }
+
+    .offerPageBackground {
+        background: none;
+    }
+
+    .offerPageBackgroundBox{
+        min-height:auto;
+        background:none;
+        color:#000;
+        font-size:1.2rem;
+        border-left:none;
+        border-bottom:1px solid #3266cc;
+    }
+
+    .buttonBlackShadow {
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+        box-shadow: none;
+      }
+    
+      h1.categoryOffer {
+        font-size:1.6rem;
+        color:#A5A9B1;
+    }
+    
+    span.categoryTxt {
+        font-size:1.2rem;
+    }
 }
 
 @media (max-width: 768px) {
@@ -336,3 +446,4 @@ nav li a:hover:after {
 @media (max-width: 414px) {
     
 }
+
