--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 b {
-    font-family: "Futura-Bol" !important;
+    font-family: "Futura-Med" !important;
     font-weight: 400 !important;
 }
 
@@ -56,6 +56,7 @@ h1.pageName {
 
 h2 {
     font-size:1.5rem !important;
+    font-family:"Futura-Med";
 }
 
 span.pageTxt {
@@ -743,14 +744,29 @@ ul.offerList {
     
 }
 
-@media (min-width: 1200px) {
+
+@media (min-width: 1680px) {
     .container {
         max-width: 1380px !important;
     }
 }
 
+/* @media (min-width: 1200px) {
+    .container {
+        max-width: 1380px !important;
+    }
+} */
+
 @media (min-width: 1850px) {
     #stopkaMail {
         margin-right:-168px;
     }
+}
+
+.fixed-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%; 
+    z-index: 999;
 }
