--- a/style.css
+++ b/style.css
@@ -315,13 +315,17 @@ nav li a:hover:after {
 @keyframes slide-in-top{0%{transform:translateY(-53px);opacity:0}100%{transform:translateY(0);opacity:1}}
 @keyframes scale-in-center{0%{transform:scale(0);opacity:1}100%{transform:scale(1);opacity:1}}
 
+#navTop {
+    min-height: 135px;
+}
+
 /* The Overlay (background) */
 .overlay {
     /* Height & width depends on how you want to reveal the overlay (see JS below) */   
     height: 100vh;
     width: 0;
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 999; /* Sit on top */
     right: 0;
     top: 0;
     background-color: #3266cc; /* Black fallback color */
@@ -595,7 +599,6 @@ ul.offerList {
         width:100%;
         min-height:285px;
         background: #85a3e1;
-        margin-bottom:-50px;
     }
     
     .homeBackgroundText h1 {
@@ -738,7 +741,9 @@ ul.offerList {
 }
 
 @media (max-width: 768px) {
-    
+    #top {
+        background:none;
+    }
 }
 
 @media (max-width: 414px) {
@@ -768,6 +773,14 @@ ul.offerList {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%; 
-    z-index: 999;
+    width: 100%;
+    padding:0 15px;
+    z-index: 889;
+}
+
+.fixed-boxHome {
+    position: fixed;
+    bottom:0;
+    z-index:889;
+    width:100%;
 }
